Don't mutate tests & change which mutations are applied